tests/snapshots/run_wpt_conformance__trtx_gemm_two_float32_2D_tensors_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm two float32 2D tensors all options",
    "trtx",
    "PASS",
)
